--- a/src/main/resources/assets/Fantastic_Fantasy/lang/en_us.json
+++ b/src/main/resources/assets/Fantastic_Fantasy/lang/en_us.json
@@ -1,7 +1,7 @@
 {
-  "item.fantasic_fantasy.star_metal": "Star Metal Ingot"
+  "item.fantasic_fantasy.star_metal_ingot": "Star Metal Ingot"
 
-  "item.fantastic_fantasy.raw_sapphire": "Raw Star Metal",
+  "item.fantastic_fantasy.raw_star_metal": "Raw Star Metal",
 
   "creativetab.fantastic_fantasy_tab": "Fantastic Fantasy"
 }
